# envelop

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  build.rs
envelop-c/: Cargo.toml
envelop-c/src/: lib.rs
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
lib/src/core/: crypto.rs  mod.rs
lib/src/protos/: encryption_result.rs  mod.rs
protos/: encryption_result.proto
src/: lib.rs
src/core/: crypto.rs  mod.rs  types.rs
