[package]
name = "envelop"
version = "0.0.1-alpha.3"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
edition = "2018"
description = "An envelope encryption library porting godaddy/asherah to rust"
license = "MIT"
repository = "https://github.com/jakeswenson/envelop"

[badges]
travis-ci = "jakeswenson/envelop"

[dependencies]
ring = "0.14.6"
protobuf="2.7.0"

[dependencies.bytes]
version = "0.4.12"
features = ["serde"]

[build-dependencies]
protoc-rust = "2.7.0"
rust_swig = "0.3.0"
